<resources>
    <string name="app_name">Story App</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username">Name</string>
    <string name="story_image">story image</string>
    <string name="story_detail">Story detail</string>
    <string name="story_edittext">Enter your story</string>
    <string name="story_submit">Submit Story</string>
    <string name="add_story">add story</string>
    <string name="login_register_button">Or Register Instead</string>
    <string name="register_login_button">Have an account? Login</string>
    <string name="check_out_new_stories">%1$s, Check out new stories</string>
    <string name="welcome">Welcome</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_desc">Please enter your email and password</string>
    <string name="hint_name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_desc">Enter your credentials to join</string>
    <string name="image_preview_contentdesc">photo to be added</string>
    <string name="add_location_info">Add location info</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Try again</string>
    <string name="password_warning">Password must be at least 8 characters</string>
</resources>